# miptCppCourse

./: .gitignore  a.txt
hw2/: main.cpp
hw3/: main.cpp
hw4/: Evgeniy.cpp  Onegin.txt  main.cpp
hw5-make/: Makefile  lib.cpp  lib.h  main.cpp
hw6-photo-viewer/: CMakeLists.txt  todo.txt
hw6-photo-viewer/include/: App.hpp  BaseContainers.hpp  BaseWindows.hpp  ImageContainer.hpp
hw6-photo-viewer/src/: App.cpp  BaseContainers.cpp  BaseWindows.cpp  ImageContainer.cpp  main.cpp
